--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,24 +61,24 @@ jobs:
           - [iPadOS, 18, 6]
           - [iPadOS, 26, 0]
 
+          - [macCatalyst, 15, 0]
+          - [macOS, 15, 0]
+
           - [tvOS, 15, 4]
           - [tvOS, 16, 4]
           - [tvOS, 17, 5]
           - [tvOS, 18, 5]
           - [tvOS, 26, 0]
 
+          - [visionOS, 1, 2]
+          - [visionOS, 2, 5]
+          - [visionOS, 26, 0]
+
           - [watchOS, 8, 5]
           - [watchOS, 9, 4]
           - [watchOS, 10, 5]
           - [watchOS, 11, 5]
           - [watchOS, 26, 0]
-
-          - [macOS, 15, 0]
-          # - [macOS, 26, 0]
-
-          - [visionOS, 1, 2]
-          - [visionOS, 2, 5]
-          - [visionOS, 26, 0]
     steps:
       - name: Git Checkout
         uses: actions/checkout@v5
@@ -102,6 +102,12 @@ jobs:
               visionOS) SCRIPT_PLATFORM=visionos ;;
               macOS) SCRIPT_PLATFORM=macos ;;
             esac
+          fi
+
+          if [ "$PLATFORM" = "macCatalyst" ]; then
+            XCB_PLATFORM="mac-catalyst"
+          else
+            XCB_PLATFORM="$PLATFORM"
           fi
 
           RUNTIME="$PLATFORM $MAJOR.$MINOR"
@@ -140,7 +146,7 @@ jobs:
           max_attempts: 3
           command: sudo xcodes runtimes install "$RUNTIME"
 
-      - if: ${{ env.PLATFORM != 'macOS' }}
+      - if: ${{ env.PLATFORM != 'macCatalyst' && env.PLATFORM != 'macOS' }}
         name: Create Required Simulators
         run: |
           set -eo pipefail
@@ -162,7 +168,7 @@ jobs:
         uses: davdroman/xcodebuild@destination
         with:
           xcode: ~26.0
-          platform: ${{ env.PLATFORM }}
+          platform: ${{ env.XCB_PLATFORM }}
           platform-version: ~${{ env.MAJOR }}.${{ env.MINOR }}
           destination: ${{ env.SIM_UDID }}
           action: build
@@ -175,7 +181,7 @@ jobs:
         uses: davdroman/xcodebuild@destination
         with:
           xcode: ~26.0
-          platform: ${{ env.PLATFORM }}
+          platform: ${{ env.XCB_PLATFORM }}
           platform-version: ~${{ env.MAJOR }}.${{ env.MINOR }}
           destination: ${{ env.SIM_UDID }}
           action: build
@@ -188,7 +194,7 @@ jobs:
         uses: davdroman/xcodebuild@destination
         with:
           xcode: ~26.0
-          platform: ${{ env.PLATFORM }}
+          platform: ${{ env.XCB_PLATFORM }}
           platform-version: ~${{ env.MAJOR }}.${{ env.MINOR }}
           destination: ${{ env.SIM_UDID }}
           action: test
