--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,36 +49,36 @@ jobs:
       fail-fast: false
       matrix:
         runtime:
-          - [iOS, 15, 5]
-          - [iOS, 16, 4]
-          - [iOS, 17, 5]
-          - [iOS, 18, 6]
-          - [iOS, 26, 0]
+          # - [iOS, 15, 5]
+          # - [iOS, 16, 4]
+          # - [iOS, 17, 5]
+          # - [iOS, 18, 6]
+          # - [iOS, 26, 0]
 
-          - [iPadOS, 15, 5]
-          - [iPadOS, 16, 4]
-          - [iPadOS, 17, 5]
-          - [iPadOS, 18, 6]
-          - [iPadOS, 26, 0]
+          # - [iPadOS, 15, 5]
+          # - [iPadOS, 16, 4]
+          # - [iPadOS, 17, 5]
+          # - [iPadOS, 18, 6]
+          # - [iPadOS, 26, 0]
 
           - [macCatalyst, 15, 0]
           - [macOS, 15, 0]
 
-          - [tvOS, 15, 4]
-          - [tvOS, 16, 4]
-          - [tvOS, 17, 5]
-          - [tvOS, 18, 5]
-          - [tvOS, 26, 0]
+          # - [tvOS, 15, 4]
+          # - [tvOS, 16, 4]
+          # - [tvOS, 17, 5]
+          # - [tvOS, 18, 5]
+          # - [tvOS, 26, 0]
 
-          - [visionOS, 1, 2]
-          - [visionOS, 2, 5]
-          - [visionOS, 26, 0]
+          # - [visionOS, 1, 2]
+          # - [visionOS, 2, 5]
+          # - [visionOS, 26, 0]
 
-          - [watchOS, 8, 5]
-          - [watchOS, 9, 4]
-          - [watchOS, 10, 5]
-          - [watchOS, 11, 5]
-          - [watchOS, 26, 0]
+          # - [watchOS, 8, 5]
+          # - [watchOS, 9, 4]
+          # - [watchOS, 10, 5]
+          # - [watchOS, 11, 5]
+          # - [watchOS, 26, 0]
     steps:
       - name: Git Checkout
         uses: actions/checkout@v5
