--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,7 +121,8 @@ jobs:
 
       - if: ${{ env.PLATFORM != 'macCatalyst' && env.PLATFORM != 'macOS' }}
         name: Download Default ${{ env.PLATFORM }} Runtime
-        run: xcodebuild -downloadPlatform ${{ env.PLATFORM }} || true
+        run: xcodebuild -downloadPlatform ${{ env.PLATFORM }}
+        continue-on-error: true
 
       - if: ${{ env.PLATFORM != 'macCatalyst' && env.PLATFORM != 'macOS' }}
         name: Check for ${{ env.RUNTIME }} Runtime
