CI: download default runtime if missing (#497)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,7 +120,12 @@ jobs:
           echo "SCRIPT_PLATFORM=$SCRIPT_PLATFORM" >> $GITHUB_ENV
 
       - if: ${{ env.PLATFORM != 'macCatalyst' && env.PLATFORM != 'macOS' }}
-        name: Check for ${{ env.RUNTIME }} runtime
+        name: Download Default ${{ env.PLATFORM }} Runtime
+        run: xcodebuild -downloadPlatform ${{ env.PLATFORM }}
+        continue-on-error: true
+
+      - if: ${{ env.PLATFORM != 'macCatalyst' && env.PLATFORM != 'macOS' }}
+        name: Check for ${{ env.RUNTIME }} Runtime
         run: |
           if xcrun simctl list runtimes | grep -q "$RUNTIME"; then
             echo "has_runtime=true" >> "$GITHUB_ENV"
@@ -140,7 +145,7 @@ jobs:
         run: xcodes runtimes --include-betas
 
       - if: env.has_runtime == 'false'
-        name: Download Required Runtime (${{ env.RUNTIME }})
+        name: Download Required ${{ env.RUNTIME }} Runtime
         uses: nick-fields/retry@v3
         with:
           timeout_minutes: 15
